--- a/approvals-styles.css
+++ b/approvals-styles.css
@@ -322,29 +322,29 @@ body {
     justify-content: flex-start;
     padding: 15.32px;
     overflow-x: hidden;
-
 	margin-top: 53.59px;
 	margin-bottom: 11.49px;
 }
 
 .card {
-    flex: 1 1 229.68px;
-    max-width: 229.68px;
-    min-width: 229.68px;
+    flex: 1 1 279.68px; /* original was 229.68px; + 50 added*/
+    max-width: 279.68px;/* original was 229.68px; */
+    min-width: 279.68px;/* original was 229.68px; */
     box-sizing: border-box;
     background-color: white;
     padding: 15.32px;
     border-radius: 7.65px;
     box-shadow: 0 3.06px 4.59px rgba(0, 0, 0, 0.1);
     color: black;
-	margin-top: 6.12px;
-	margin-left: 1.92px;
+	margin-top: 16.12px;
+	margin-left: 30.92px;
+	height: 405px;
 }
 
 
 .cardv2 {
     flex: 1 1 229.68px;
-    max-width: 191.4px;
+    max-width: 191.4px; /* original was 191.4px; */
     min-width: 214.38px;
     box-sizing: border-box;
     background-color: white;
@@ -365,14 +365,14 @@ body {
 }
 
 .card-section-horizontal .label {
-    font-size: 11.49px;
+    font-size: 15.49px;
     font-weight: bold;
     text-align: left;
     margin: 0;
 }
 
 .card-section-horizontal .value {
-    font-size: 11.49px;
+    font-size: 15.49px;
     font-weight: bold;
     text-align: right;
     margin-left: auto;
@@ -435,8 +435,9 @@ body {
 
 
 .label {
-    font-size: 11.49px;
+    font-size: 14.49px;
     font-weight: bold;
+	margin-top: 2px;
 }
 
 .value {
@@ -449,16 +450,16 @@ body {
 .box {
     background-color: #f0f0f0;
     padding: 7.65px;
-    font-size: 9.18px;
+    font-size: 12.18px;
     border-radius: 0.0px;
     margin-top: 3.82px;
     display: block;
-    height: 19.14px;
-    width: 183.75px;
+    height: 25.14px;
+    width: 232.75px; /* original was 183.75px; */ 
 }
 
 .price-box {
-    font-size: 19.14px;
+    font-size: 23.14px;
     font-weight: bold;
     background-color: #515151;
     color: white;
@@ -467,6 +468,7 @@ body {
     margin: 11.49px auto;
     border-radius: 0.0px;
     width: 111.02px;
+	margin-top: 15px;
 }
 
 a {
@@ -482,7 +484,7 @@ a {
     padding: 5.35px 26.79px;
     border-radius: 39.81px;
     cursor: pointer;
-    font-size: 11.49px;
+    font-size: 13.49px;
     margin-top: 7.65px;
     text-align: center;
     display: block;
@@ -601,7 +603,7 @@ a {
 
 
 .card-title {
-    font-size: 15.32px;
+    font-size: 20.32px;
     font-weight: bold;
     text-align: center;
     margin: 7.65px 0;
